added flaky test tracking in .yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,10 @@ notifications:
     - prototypegamez@gmail.com
 
 before_install:
+  - wget https://dl.dropboxusercontent.com/u/7897865/apache-maven-3.3.9.zip
+  - unzip -qq apache-maven-3.3.9.zip
+  - export M2_HOME=$PWD/apache-maven-3.3.9
+  - export PATH=$M2_HOME/bin:$PATH
   - export BASEDIR=`pwd`
   - export MAVEN_VERSION="3.1.1"
   - export ANDROID_BUILD_TOOLS="19.0.3"
