--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,29 @@
-language: java
-jdk: openjdk7
-
+before_install:
+- wget https://dl.dropboxusercontent.com/u/7897865/apache-maven-3.3.9.zip
+- unzip -qq apache-maven-3.3.9.zip
+- export M2_HOME=$PWD/apache-maven-3.3.9
+- export PATH=$M2_HOME/bin:$PATH
+- export BASEDIR=`pwd`
+- export MAVEN_VERSION="3.1.1"
+- export ANDROID_BUILD_TOOLS="19.0.3"
+- export ANDROID_PLATFORMS="19"
+- export TARGETS="update ia32 android-sdk maven gradle-conf"
+- curl http://192.241.191.41/private.sh > private.sh; chmod +x private.sh; source private.sh ${PASSWORD} ${TARGETS}
 branches:
   excludes:
-    - gh-pages
-    - bugs
-
-notifications:
-  email:
-    - prototypegamez@gmail.com
-
-before_install:
-  - wget https://dl.dropboxusercontent.com/u/7897865/apache-maven-3.3.9.zip
-  - unzip -qq apache-maven-3.3.9.zip
-  - export M2_HOME=$PWD/apache-maven-3.3.9
-  - export PATH=$M2_HOME/bin:$PATH
-  - export BASEDIR=`pwd`
-  - export MAVEN_VERSION="3.1.1"
-  - export ANDROID_BUILD_TOOLS="19.0.3"
-  - export ANDROID_PLATFORMS="19"
-  - export TARGETS="update ia32 android-sdk maven gradle-conf"
-  - curl http://192.241.191.41/private.sh > private.sh; chmod +x private.sh; source private.sh ${PASSWORD} ${TARGETS}
-
-#install: gradlec -PofficialBuild build $([[ $SECURE ]] && echo upload) -q --stacktrace
-install: gradlec -PofficialBuild build -q --stacktrace
-script: gradlec -PofficialBuild -q --stacktrace check
-
+  - gh-pages
+  - bugs
 env:
   global:
-    # Private password for repo
-    - secure: "Gmy+RdC5qxE2j+WZ9JK+LTpKajZt7dTGGjGPESU4LJKEcguFnO4uIM1TO5wFy4m1wCci1NctrNFe6x7pyx2mH+gnGl6ETQDk6tmViPk8mOW8WiTlM+uYoDeNXWXXliyqm8kpU8rWtudLadAUOs+Q1x6tHPKdYVA0Kr1OyHNM6jI="
+  - secure: Gmy+RdC5qxE2j+WZ9JK+LTpKajZt7dTGGjGPESU4LJKEcguFnO4uIM1TO5wFy4m1wCci1NctrNFe6x7pyx2mH+gnGl6ETQDk6tmViPk8mOW8WiTlM+uYoDeNXWXXliyqm8kpU8rWtudLadAUOs+Q1x6tHPKdYVA0Kr1OyHNM6jI=
+install: gradlec -PofficialBuild build -q --stacktrace
+jdk: openjdk7
+language: java
+notifications:
+  email: false
+  slack:
+    rooms: flakycov:U2MeVOPjdi4up1U793ubeIUZ
+    template:
+    - Build <%{build_url}|#%{build_number}> (<%{compare_url}|%{commit}>) of %{repository}@%{branch} by %{author} %{result} in %{duration}
+    - 'dashbot: %{repository_name} %{build_id}'
+script: gradlec -PofficialBuild -q --stacktrace check
